fixed tabbed image fade in. introduced flicker bug in music show page

--- a/style/style.css
+++ b/style/style.css
@@ -82,7 +82,7 @@ div {
   background-size: cover;
 
   /*this ensures the title appears at the same time as the image*/
-  opacity: 0;
+  /*opacity: 0;*/
 
 }
 
